--- a/kubernetes/apps/longhorn-system/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/helmrelease.yaml
@@ -1,17 +1,11 @@
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/ocirepository-source-v1beta2.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1.json
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: OCIRepository
+kind: HelmRepository
 metadata:
-  name: longhorn
+  name: longhorn-charts
 spec:
   interval: 5m
-  layerSelector:
-    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-    operation: copy
-  url: oci://ghcr.io/longhorn/charts/longhorn
-  ref:
-    tag: 1.9.1
+  url: https://charts.longhorn.io
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -20,23 +14,27 @@ metadata:
   name: longhorn
 spec:
   interval: 1h
-  chartRef:
-    kind: OCIRepository
-    name: longhorn
+  chart:
+    spec:
+      chart: longhorn
+      version: 1.6.2
+      sourceRef:
+        kind: HelmRepository
+        name: longhorn-charts
   install:
     remediation:
       retries: 5
   upgrade:
     cleanupOnFail: true
     remediation:
-      strategy: rollback
       retries: 3
+      strategy: rollback
   values:
+    defaultSettings:
+      defaultReplicaCount: 2
     fullnameOverride: longhorn
     persistence:
       defaultClass: true
       defaultClassReplicaCount: 2
-    defaultSettings:
-      defaultReplicaCount: 2
     serviceMonitor:
       enabled: true
