--- a/kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
@@ -4,12 +4,10 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: longhorn
-  annotations:
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
 spec:
   hostnames: ["longhorn.${SECRET_DOMAIN}"]
   parentRefs:
-    - name: external
+    - name: internal
       namespace: kube-system
       sectionName: https
   rules:
