--- a/kubernetes/apps/security/secrets/kustomization.yaml
+++ b/kubernetes/apps/security/secrets/kustomization.yaml
@@ -2,9 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-components:
-  - ../../components/common
 resources:
-  - ./namespace.yaml
-  - ./secrets
-  - ./authentik/ks.yaml
+  - ./cluster-secrets.sops.yaml
+  - ./sops-age.sops.yaml
+
