--- a/kubernetes/apps/security/authentik/app/admin-job.yaml
+++ b/kubernetes/apps/security/authentik/app/admin-job.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: authentik-promote-admin
+  name: authentik-promote-admin-v2
 spec:
   ttlSecondsAfterFinished: 120
   backoffLimit: 0
@@ -13,7 +13,7 @@ spec:
         - name: promote
           image: ghcr.io/goauthentik/server:2025.8.1
           imagePullPolicy: IfNotPresent
-          command: ["/bin/sh","-lc"]
+          command: ["/bin/bash","-lc"]
           args:
             - |
               set -euo pipefail
