--- a/kubernetes/apps/security/authentik/app/kustomization.yaml
+++ b/kubernetes/apps/security/authentik/app/kustomization.yaml
@@ -8,5 +8,4 @@ resources:
   - ./httproute.yaml
   - ./secret.sops.yaml
   - ./bootstrap-secret.sops.yaml
-  - ./admin-blueprint.sops.yaml
-  - ./admin-job.yaml
+  # admin blueprint/jobs removed for fresh bootstrap
