monitoring: fix grafana secrets via envFromSecret; adjust Loki singleBinary for filesystem; wire kustomization

--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -38,6 +38,7 @@ spec:
     service:
       type: ClusterIP
       port: 80
+    envFromSecret: grafana-env
     persistence:
       enabled: true
       type: pvc
@@ -47,4 +48,3 @@ spec:
       requests:
         cpu: 50m
         memory: 256Mi
-
