monitoring: bypass grafana leaked secret assertion; disable loki gateway for filesystem single-binary

--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -43,5 +43,7 @@ spec:
         enabled: true
         storageClass: longhorn
         size: 50Gi
+    gateway:
+      enabled: false
     serviceMonitor:
       enabled: true
