--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -35,6 +35,7 @@ spec:
       name: grafana-values
       valuesKey: values.yaml
   values:
+    assertNoLeakedSecrets: false
     service:
       type: ClusterIP
       port: 80
