--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -36,15 +36,7 @@ spec:
         replication_factor: 1
       storage:
         type: filesystem
-      schemaConfig:
-        configs:
-          - from: 2024-01-01
-            store: boltdb-shipper
-            object_store: filesystem
-            schema: v13
-            index:
-              prefix: index_
-              period: 24h
+      useTestSchema: true
       limits_config:
         retention_period: 720h
     singleBinary:
