--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -6,14 +6,14 @@ type: Opaque
 stringData:
   values.yaml: |-
     adminUser: admin
-    adminPassword: "PLEASE_CHANGE_ME"
+    adminPassword: "J&2E2qyXqNzzFUH4um2k"
     grafana.ini:
       server:
         root_url: https://grafana.${SECRET_DOMAIN}
         domain: grafana.${SECRET_DOMAIN}
       auth:
         disable_login_form: false
-        oauth_auto_login: false
+        oauth_auto_login: true
       auth.generic_oauth:
         enabled: true
         name: Authentik
