--- a/kubernetes/apps/monitoring/grafana/app/env.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/env.sops.yaml
@@ -1,24 +1,24 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: grafana-env
+    name: grafana-env
 type: Opaque
 stringData:
-  GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:G1qFNUCVdteG,iv:SEeeB5fxev6lpCem9MS8fKTZNrlVHDtreFUdkymBg4w=,tag:hNrxE66uVHaTo7Ebx1qPEw==,type:str]
-  GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:Zge4tClSOv7N,iv:jxfjFT2mR1wHScY3ZKElOFgK7ojaS5P9T6Z0s7uDRyk=,tag:SDL9GwrWXrO2ov+KSu4TCQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:QKe6HIXpsG45nRDMcMf6V40L6hsNltx3OGNcCs1qb7wvIEM8d7OGIQ==,iv:GWUmou0SU0FGZR9TVayolYABxswpC4LC2vuwufj7IfE=,tag:AVJ9NUcTzdFg6GK4xDQxcg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:0Iet3cWH+QHzrL+6DkOEfiJdUwfIu0OTYTYt32KN6jqfpKhloOqjOyu0MD+pOvAw4/tDYv1cQnnSJlaT3d4gF8H8DKrSkIcRUpvP6hgr5573dqN9nUaV8jfTKyJQNXUDI2DWshy51rgwoxXyDi8YsXw3S+15BD3FLJJPrEdgOu4=,iv:vw9tPurp75/oPmBdAemxdKv5JnpkORyL8TvQxOrV48I=,tag:ZcEGaZtqA3QiVttn4A22mg==,type:str]
 sops:
-  age:
-    - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuZkt2RXlvR0ZuU0VVTmZB
-        V0x5akRRS21aUDhlQTFVSzJXdnNSeVd2cWxvCnVxWUNSQ0VTbFF4M2NJb3lpMmI3
-        Q2xjdEI3bUlETGtIODgvVnRsb2FjWHcKLS0tIHowUU9oNmVLZTM3d1Zwbm16Tm16
-        Vm9tdnc0TDBSNnJUT0ZzVVJYdzhvcHcKfi3gLzRaqdy2SRk7CrngllWMGuWXhSSR
-        wMc3IMcNlV0aCpFYPPc5jCYNpNgAw8gnNZNtBXk2EOcY545aSNyDMg==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-08-31T17:29:26Z"
-  mac: ENC[AES256_GCM,data:Dgy0SR+O3og7w/1uoq78GDVNT2xYt0OJcuHKSkOpLF0+W9H9aUw5vFzmpZtJrLVSRD6iT7s5g6dQgEgASE9jnGjqq3LG84NyM8vREOI6sKhnCWbLvEVM3FKa/FvKyCJUr9cxlDIotVy4p9T/QCbyTUPElr1ut8QAs779fwOiiuI=,iv:4ZeWR17G4DDgeT5dnjjAhbXCYdefg2QMh3JEztFpPP8=,tag:TAv6GBOgfZx6z/xmBq1/EA==,type:str]
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.10.2
+    age:
+        - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuZkt2RXlvR0ZuU0VVTmZB
+            V0x5akRRS21aUDhlQTFVSzJXdnNSeVd2cWxvCnVxWUNSQ0VTbFF4M2NJb3lpMmI3
+            Q2xjdEI3bUlETGtIODgvVnRsb2FjWHcKLS0tIHowUU9oNmVLZTM3d1Zwbm16Tm16
+            Vm9tdnc0TDBSNnJUT0ZzVVJYdzhvcHcKfi3gLzRaqdy2SRk7CrngllWMGuWXhSSR
+            wMc3IMcNlV0aCpFYPPc5jCYNpNgAw8gnNZNtBXk2EOcY545aSNyDMg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-08-31T18:12:51Z"
+    mac: ENC[AES256_GCM,data:U4W7/T2LHFjezHE+DoDsLJRoZdnGeK56Jg3198Bq1D+68QVbZgYdHhPoJs6pkKTzF/DpLYEYwgcBbRv5DPmYffLWOTJPZTKRJxpAz2Npp2ZGHrVoE5WqMfgsg7R16Z5EtguunatNGGZEQ4qFQ657Kd8lQveKRgX824vJwy2imi0=,iv:Sg6jQNDu22ptkQv+n9wiOmJyUpg2XAZed26aX7ikaZ0=,tag:kbQDxndFdtQNchJMJL6Rzg==,type:str]
+    encrypted_regex: ^(data|stringData)$
+    mac_only_encrypted: true
+    version: 3.10.2
