--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -49,6 +49,7 @@ spec:
                 period: 24h
       limits_config:
         retention_period: 720h
+        allow_structured_metadata: false
     singleBinary:
       replicas: 1
       persistence:
