--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -56,6 +56,8 @@ spec:
         enabled: true
         storageClass: longhorn
         size: 50Gi
+      extraArgs:
+        - -validation.allow-structured-metadata=false
     gateway:
       enabled: false
     serviceMonitor:
