--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -47,9 +47,17 @@ spec:
               index:
                 prefix: index_
                 period: 24h
+        limits_config:
+          reject_old_samples: true
+          reject_old_samples_max_age: 168h
+          max_cache_freshness_per_query: 10m
+          split_queries_by_interval: 15m
+          query_timeout: 300s
+          volume_enabled: true
+          retention_period: 720h
+          allow_structured_metadata: false
       limits_config:
         retention_period: 720h
-        allow_structured_metadata: false
     singleBinary:
       replicas: 1
       persistence:
