--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -22,8 +22,8 @@ stringData:
         login_attribute_path: preferred_username
         name_attribute_path: name
         # These will come from your Authentik OAuth2/OpenID provider for Grafana
-        auth_url: https://auth.${SECRET_DOMAIN}/application/o/grafana/authorize/
-        token_url: https://auth.${SECRET_DOMAIN}/application/o/grafana/token/
+        auth_url: https://auth.${SECRET_DOMAIN}/application/o/authorize/
+        token_url: https://auth.${SECRET_DOMAIN}/application/o/token/
         api_url: https://auth.${SECRET_DOMAIN}/application/o/userinfo/
         allow_sign_up: true
     datasources:
