--- a/kubernetes/apps/monitoring/event-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/event-exporter/app/helmrelease.yaml
@@ -5,7 +5,8 @@ metadata:
   name: bitnami
 spec:
   interval: 1h
-  url: https://charts.bitnami.com/bitnami
+  type: oci
+  url: oci://registry-1.docker.io/bitnamicharts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
