--- a/kubernetes/apps/monitoring/event-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/event-exporter/app/helmrelease.yaml
@@ -1,12 +1,16 @@
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+kind: OCIRepository
 metadata:
-  name: bitnami
+  name: kubernetes-event-exporter
 spec:
   interval: 1h
-  type: oci
-  url: oci://registry-1.docker.io/bitnamicharts
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  url: oci://registry-1.docker.io/bitnamicharts/kubernetes-event-exporter
+  ref:
+    tag: 3.6.3
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -14,13 +18,9 @@ metadata:
   name: kubernetes-event-exporter
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: kubernetes-event-exporter
-      version: 3.6.3
-      sourceRef:
-        kind: HelmRepository
-        name: bitnami
+  chartRef:
+    kind: OCIRepository
+    name: kubernetes-event-exporter
   install:
     remediation:
       retries: -1
