monitoring: add Grafana events dashboard (Loki) via provisioning; add blackbox alert rules

--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -43,3 +43,49 @@ stringData:
             type: tempo
             access: proxy
             url: http://tempo.monitoring.svc.cluster.local:3200
+    dashboardProviders:
+      dashboardproviders.yaml:
+        apiVersion: 1
+        providers:
+          - name: 'default'
+            orgId: 1
+            folder: ''
+            type: file
+            disableDeletion: false
+            updateIntervalSeconds: 10
+            options:
+              path: /var/lib/grafana/dashboards/default
+    dashboards:
+      default:
+        kubernetes-events:
+          json: |-
+            {
+              "id": null,
+              "uid": "k8s-events",
+              "title": "Kubernetes Events (Loki)",
+              "tags": ["kubernetes","events","loki"],
+              "timezone": "browser",
+              "schemaVersion": 39,
+              "version": 1,
+              "refresh": "30s",
+              "panels": [
+                {
+                  "type": "logs",
+                  "title": "Recent Events",
+                  "gridPos": { "x": 0, "y": 0, "w": 24, "h": 16 },
+                  "options": {
+                    "dedupStrategy": "none",
+                    "enableLogDetails": true,
+                    "showLabels": false,
+                    "wrapLogMessage": true
+                  },
+                  "targets": [
+                    {
+                      "refId": "A",
+                      "datasource": { "type": "loki", "uid": "Loki" },
+                      "expr": "{job=\"kubernetes-event-exporter\"} | json"
+                    }
+                  ]
+                }
+              ]
+            }
