monitoring: add Top Event Reasons panel (Loki) and SLO-like blackbox alerts

--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -86,6 +86,24 @@ stringData:
                       "expr": "{job=\"kubernetes-event-exporter\"} | json"
                     }
                   ]
+                },
+                {
+                  "type": "bargauge",
+                  "title": "Top Event Reasons (1h)",
+                  "gridPos": { "x": 0, "y": 16, "w": 24, "h": 10 },
+                  "options": {
+                    "displayMode": "gradient",
+                    "orientation": "horizontal",
+                    "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false }
+                  },
+                  "fieldConfig": { "defaults": { "unit": "short" }, "overrides": [] },
+                  "targets": [
+                    {
+                      "refId": "A",
+                      "datasource": { "type": "loki", "uid": "Loki" },
+                      "expr": "topk(10, sum by (reason) (count_over_time(({job=\\\"kubernetes-event-exporter\\\"} | json | label_format reason=\\\`Reason\\\`)[1h])))"
+                    }
+                  ]
                 }
               ]
             }
