monitoring: add HTTP SLO (Blackbox) Grafana dashboard and PVC usage/inode alerts

--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -107,3 +107,59 @@ stringData:
                 }
               ]
             }
+        http-slo-blackbox:
+          json: |-
+            {
+              "id": null,
+              "uid": "http-slo-blackbox",
+              "title": "HTTP SLO (Blackbox)",
+              "tags": ["slo","blackbox"],
+              "timezone": "browser",
+              "schemaVersion": 39,
+              "version": 1,
+              "refresh": "30s",
+              "panels": [
+                {"type":"stat","title":"Grafana uptime 1h","gridPos":{"x":0,"y":0,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"avg_over_time(probe_success{job=\"blackbox-grafana\"}[1h]) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"percentage","steps":[{"color":"red","value":0},{"color":"yellow","value":99.0},{"color":"green","value":99.9}]}}}},
+                {"type":"stat","title":"Grafana uptime 6h","gridPos":{"x":6,"y":0,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"avg_over_time(probe_success{job=\"blackbox-grafana\"}[6h]) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"percentage","steps":[{"color":"red","value":0},{"color":"yellow","value":99.0},{"color":"green","value":99.9}]}}}},
+                {"type":"stat","title":"Grafana uptime 24h","gridPos":{"x":12,"y":0,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"avg_over_time(probe_success{job=\"blackbox-grafana\"}[24h]) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"percentage","steps":[{"color":"red","value":0},{"color":"yellow","value":99.0},{"color":"green","value":99.9}]}}}},
+                {"type":"stat","title":"Grafana uptime 30d","gridPos":{"x":18,"y":0,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"avg_over_time(probe_success{job=\"blackbox-grafana\"}[30d]) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"percentage","steps":[{"color":"red","value":0},{"color":"yellow","value":99.0},{"color":"green","value":99.9}]}}}},
+
+                {"type":"stat","title":"Grafana fast burn err% (5m)","gridPos":{"x":0,"y":6,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"(1 - avg_over_time(probe_success{job=\"blackbox-grafana\"}[5m])) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"absolute","steps":[{"color":"green","value":0},{"color":"yellow","value":0.1},{"color":"red","value":1.0}]}}}},
+                {"type":"stat","title":"Grafana slow burn err% (30m)","gridPos":{"x":6,"y":6,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"(1 - avg_over_time(probe_success{job=\"blackbox-grafana\"}[30m])) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"absolute","steps":[{"color":"green","value":0},{"color":"yellow","value":0.1},{"color":"red","value":1.0}]}}}},
+
+                {"type":"stat","title":"Authentik uptime 1h","gridPos":{"x":0,"y":12,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"avg_over_time(probe_success{job=\"blackbox-authentik\"}[1h]) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"percentage","steps":[{"color":"red","value":0},{"color":"yellow","value":99.0},{"color":"green","value":99.9}]}}}},
+                {"type":"stat","title":"Authentik uptime 6h","gridPos":{"x":6,"y":12,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"avg_over_time(probe_success{job=\"blackbox-authentik\"}[6h]) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"percentage","steps":[{"color":"red","value":0},{"color":"yellow","value":99.0},{"color":"green","value":99.9}]}}}},
+                {"type":"stat","title":"Authentik uptime 24h","gridPos":{"x":12,"y":12,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"avg_over_time(probe_success{job=\"blackbox-authentik\"}[24h]) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"percentage","steps":[{"color":"red","value":0},{"color":"yellow","value":99.0},{"color":"green","value":99.9}]}}}},
+                {"type":"stat","title":"Authentik uptime 30d","gridPos":{"x":18,"y":12,"w":6,"h":6},
+                 "targets":[{"refId":"A","datasource":{"type":"prometheus","uid":"Prometheus"},
+                   "expr":"avg_over_time(probe_success{job=\"blackbox-authentik\"}[30d]) * 100"}],
+                 "fieldConfig":{"defaults":{"unit":"percent","thresholds":{"mode":"percentage","steps":[{"color":"red","value":0},{"color":"yellow","value":99.0},{"color":"green","value":99.9}]}}}}
+              ]
+            }
