monitoring: disable OAuth auto-login for Grafana

--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -13,7 +13,7 @@ stringData:
         domain: grafana.${SECRET_DOMAIN}
       auth:
         disable_login_form: false
-        oauth_auto_login: true
+        oauth_auto_login: false
       auth.generic_oauth:
         enabled: true
         name: Authentik
