--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -43,6 +43,12 @@ stringData:
             type: tempo
             access: proxy
             url: http://tempo.monitoring.svc.cluster.local:3200
+    sidecar:
+      dashboards:
+        enabled: true
+        searchNamespace: ALL
+        folder: /var/lib/grafana/dashboards
+        defaultFolderName: default
     dashboardProviders:
       dashboardproviders.yaml:
         apiVersion: 1
