--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -2,11 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: media
+components:
+  - ../../components/common
 resources:
-  - ./cert-manager
-  - ./default
-  - ./flux-system
-  - ./kube-system
-  - ./longhorn-system
-  - ./network
-  - ./media
+  - ./namespace.yaml
+  - ./plex/ks.yaml
+
