--- a/kubernetes/apps/media/plex/app/httproute.yaml
+++ b/kubernetes/apps/media/plex/app/httproute.yaml
@@ -4,6 +4,8 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: plex
+  annotations:
+    # Internal only; no external-dns record
 spec:
   hostnames: ["plex.${SECRET_DOMAIN}"]
   parentRefs:
@@ -15,3 +17,21 @@ spec:
         - name: plex
           port: 32400
 
+---
+# Public route via external gateway (do not place Authentik in front of Plex)
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: plex-public
+  annotations:
+    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+spec:
+  hostnames: ["plex.${SECRET_DOMAIN}"]
+  parentRefs:
+    - name: external
+      namespace: kube-system
+      sectionName: https
+  rules:
+    - backendRefs:
+        - name: plex
+          port: 32400
