--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -25,8 +25,8 @@ spec:
         pod:
           annotations:
             reloader.stakater.com/auto: "true"
-        securityContext:
-          supplementalGroups: [44, 107]
+          securityContext:
+            supplementalGroups: [44, 107]
         containers:
           app:
             image:
@@ -52,13 +52,7 @@ spec:
                 enabled: true
               readiness:
                 enabled: true
-            # Mount config and media
-            volumeMounts:
-              - name: config
-                mountPath: /config
-              - name: media
-                mountPath: /data/media
-                readOnly: true
+            # Mounts are managed via persistence.* (no manual volumeMounts)
 
           rclone:
             image:
@@ -66,7 +60,7 @@ spec:
               tag: 1.67.0
             args:
               - mount
-              - gdrive:           # remote name in rclone.conf
+              - "gdrive:"
               - /mnt/media
               - --config=/config/rclone/rclone.conf
               - --umask=002
@@ -84,12 +78,7 @@ spec:
                 memory: 128Mi
               limits:
                 memory: 512Mi
-            volumeMounts:
-              - name: media
-                mountPath: /mnt/media
-              - name: rclone-config
-                mountPath: /config/rclone
-                readOnly: true
+            # Mounts are managed via persistence.* (no manual volumeMounts)
 
     persistence:
       # Plex config on Longhorn (RWO)
@@ -107,9 +96,13 @@ spec:
       media:
         enabled: true
         type: emptyDir
-        globalMounts:
-          - path: /data/media
-            readOnly: true
+        advancedMounts:
+          plex:
+            app:
+              - path: /data/media
+                readOnly: true
+            rclone:
+              - path: /mnt/media
 
       # Secret with rclone.conf providing a remote named `gdrive`
       rclone-config:
