media(plex): rclone mount stability -- add --allow-non-empty

--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -67,6 +67,7 @@ spec:
               - --dir-cache-time=1h
               - --poll-interval=1m
               - --allow-other
+              - --allow-non-empty
               - --vfs-cache-mode=full
               - --vfs-read-ahead=64M
               - --buffer-size=32M
