--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -34,6 +34,7 @@ spec:
               tag: 1.41.4.9463-630c9f557 # example, adjust as desired
             env:
               TZ: "UTC"
+              ADVERTISE_IP: "https://plex.${SECRET_DOMAIN}"
             # No auto-claim; claim via Web UI after first start
             resources:
               requests:
