--- a/kubernetes/apps/network/cloudflare-tunnel/app/resources/config.yaml
+++ b/kubernetes/apps/network/cloudflare-tunnel/app/resources/config.yaml
@@ -3,6 +3,10 @@ originRequest:
   originServerName: "external.${SECRET_DOMAIN}"
 
 ingress:
+  # Route Plex directly to the Plex service to avoid double TLS/proxy issues
+  - hostname: "plex.${SECRET_DOMAIN}"
+    service: http://plex.media.svc.cluster.local:32400
+  # Fallback to external gateway for other hosts
   - hostname: "${SECRET_DOMAIN}"
     service: &svc https://cilium-gateway-external.kube-system.svc.cluster.local
   - hostname: "*.${SECRET_DOMAIN}"
