fix(network/cloudflare-tunnel): disable HTTP/2 to origin (cloudflared)
Add http2Origin:false in config and set TUNNEL_ORIGIN_ENABLE_HTTP2=false to test Plex web UI spinner issue.

--- a/kubernetes/apps/network/cloudflare-tunnel/app/resources/config.yaml
+++ b/kubernetes/apps/network/cloudflare-tunnel/app/resources/config.yaml
@@ -1,6 +1,8 @@
 ---
 originRequest:
   originServerName: "external.${SECRET_DOMAIN}"
+  # Disable HTTP/2 to origin to avoid any websocket/upgrade quirks
+  http2Origin: false
 
 ingress:
   # Route ALL hosts (including plex) via the external gateway so
