fix(media/plex): switch Deployment strategy to Recreate to avoid RWO PVC multi-attach during rollouts

--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
   values:
     controllers:
       plex:
-        strategy: RollingUpdate
+        strategy: Recreate
         pod:
           annotations:
             reloader.stakater.com/auto: "true"
