--- a/kubernetes/apps/minio/kustomization.yaml
+++ b/kubernetes/apps/minio/kustomization.yaml
@@ -2,12 +2,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: minio
+components:
+  - ../../components/common
 resources:
-  - ./cert-manager
-  - ./default
-  - ./flux-system
-  - ./kube-system
-  - ./longhorn-system
-  - ./network
-  - ./media
-  - ./minio
+  - ./secrets
+  - ./minio/ks.yaml
