--- a/kubernetes/apps/minio/minio/app/kustomization.yaml
+++ b/kubernetes/apps/minio/minio/app/kustomization.yaml
@@ -3,11 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cert-manager
-  - ./default
-  - ./flux-system
-  - ./kube-system
-  - ./longhorn-system
-  - ./network
-  - ./media
-  - ./minio
+  - ./helmrelease.yaml
+  - ./bucket-job.yaml
+
