--- a/kubernetes/apps/minio/secrets/kustomization.yaml
+++ b/kubernetes/apps/minio/secrets/kustomization.yaml
@@ -3,11 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cert-manager
-  - ./default
-  - ./flux-system
-  - ./kube-system
-  - ./longhorn-system
-  - ./network
-  - ./media
-  - ./minio
+  - ./minio-root.sops.yaml
+  - ./minio-oidc.sops.yaml
