--- a/kubernetes/apps/minio/secrets/minio-oidc.sops.yaml
+++ b/kubernetes/apps/minio/secrets/minio-oidc.sops.yaml
@@ -5,15 +5,31 @@ metadata:
   namespace: minio
 type: Opaque
 stringData:
-  # OIDC with Authentik
-  # Configure an application in Authentik with redirect URI:
-  #   https://minio.${SECRET_DOMAIN}/oauth_callback
-  # and scopes: openid profile email
-  MINIO_IDENTITY_OPENID_CONFIG_URL: https://auth.${SECRET_DOMAIN}/application/o/.well-known/openid-configuration
-  MINIO_IDENTITY_OPENID_CLIENT_ID: "CHANGE_ME"
-  MINIO_IDENTITY_OPENID_CLIENT_SECRET: "CHANGE_ME"
-  MINIO_IDENTITY_OPENID_REDIRECT_URI: https://minio.${SECRET_DOMAIN}/oauth_callback
-  MINIO_IDENTITY_OPENID_SCOPES: "openid,profile,email"
-  # Optional: map claim for username / policy matching if desired
-  # MINIO_IDENTITY_OPENID_CLAIM_NAME: "email"
-  # MINIO_IDENTITY_OPENID_CLAIM_PREFIX: ""
+  #ENC[AES256_GCM,data:lBqkFbnMe8YcwaPKn6Fmun9VZ50=,iv:e0veNRMw3SYcjshHUSDxZo6KW5Q5EofA9lmHWYHq/ng=,tag:4HEwYhea/yXYJYTZw2zvFg==,type:comment]
+  #ENC[AES256_GCM,data:8KT4ejEX2quCuSAQebr7gGs2toq1VK/BKtkR30q9B4m7PRDdI5TcLyOOBTCx26NTc3HeUGoa+5J7,iv:edM5QD5rGUb6iEmnHCeT4IdJmmffloCq04EKEuSgr5U=,tag:3q6jmIDyTgbkJSIdB+vO0Q==,type:comment]
+  #ENC[AES256_GCM,data:i9CGNu9TKfg7csuc6kAnIozpoCzg+E0JMDQAjKkvWE6DRzj/gmKoiywaX8pYI/6+,iv:8FMsNeGTMlDQgx9aj5GHl/dn65QrODpQ62C52WJ8yko=,tag:zZ1v/SudeAI0qSijuWOH3A==,type:comment]
+  #ENC[AES256_GCM,data:DmbOSCPiN3tlKq7pFR8W4OrkPIJTqRobTqtERB18jZRJ,iv:HJKMo+6TkATAd8DujEJS++YvKZ33UFAWrQYUue2uJ9k=,tag:jlFcCzqtK5PS4oAAksXwhA==,type:comment]
+  MINIO_IDENTITY_OPENID_CONFIG_URL: ENC[AES256_GCM,data:a6uNT4dhxuDu2gfyOwGTmQjdYJQJEyeh76cDeqRrNrvY5hAyKtT7mEj9NsAXXGUUBydoC/99FWWJXy1HJYuefrV4+DNDtUfReAkRDg==,iv:LVsXKzXDKuzpBW7dXPkHL9Q215gliIsNjnotxIfxMQM=,tag:/IOq1zyW2gXgre1X6VipPQ==,type:str]
+  MINIO_IDENTITY_OPENID_CLIENT_ID: ENC[AES256_GCM,data:ftvbrp7rbYlj+9vSjH51n24snMDtqEyAQQ8CSxihUwd1npwIOiOnjA==,iv:605U3WZVr4MRDWessCVz2avIOQE75w4reyd7tN3g6Y4=,tag:Wray363EXvSll2iipUn8FQ==,type:str]
+  MINIO_IDENTITY_OPENID_CLIENT_SECRET: ENC[AES256_GCM,data:lRxtgP4mB+JRpjU51D3s7a+Fyu2fpG12GTdDM23n8ZZfpb5UnAObragfFBVwuHQ9lCEmCERxSk2x5p/y7DewS60siulrzrumi7/oGqirfckB6/lhLSzMHdEABbkYXeaHZmmmVvQTOJ94i3OCQ9hqx05y2cjHmwJFtONqXYqPLFU=,iv:yEipNh6bSojo8lFSM5OipFT2OqVNcNqfA/A4X3fpbRQ=,tag:yli5KoQMriDDz/mCsd/IgA==,type:str]
+  MINIO_IDENTITY_OPENID_REDIRECT_URI: ENC[AES256_GCM,data:ZDNucq1G63sDkYK6zbhxGfEc6lMoSpI7QQzysXD0Z/TBuv8BTLqDXjq/J2kn,iv:AiywfeR8gPnA/qF0+FYgQgz2bJElDqSTNQ6cid0/f4Q=,tag:SSN+yYk12VW5ystM65IORw==,type:str]
+  MINIO_IDENTITY_OPENID_SCOPES: ENC[AES256_GCM,data:8De6aExNpo6gtTOEFaxxR7jJ9qs=,iv:3zr0650SjHVQ/vhFCWzqCeP7NxKUzoHe5yBn5MSbskY=,tag:q3UTmFO0P+00lf+I4DAfMw==,type:str]
+  #ENC[AES256_GCM,data:XWaftMtSKlprtKzrMQsfn6rBcF6xj2uTrbMISi6DeUM34PFrCEe698OZa//IAVBKcEONERSfMcEBtfoB6F0=,iv:fOLv8VulS7ibYIzyx13jMVTO7EnEw1bIATt4/TNWfy8=,tag:fOSUmiceSrC/jR1xAOjrKA==,type:comment]
+  #ENC[AES256_GCM,data:VV20EP8wCK3HRnWO/WxTZx9WP8AWgXKxf8dBEk2U7ni7KXPqhyqEw/mc,iv:NH5mp9l6RriUL6DYRtjxry37kNkgO59izA9E4WIeOng=,tag:DDRToGRk8x37z+yoZovsbw==,type:comment]
+  #ENC[AES256_GCM,data:/8sl/w3wwxZR/46td8sTOpn0rQrX1nODbgda1WoSMeZVIg+StvJM,iv:nBKDhrIF6c9Cuo0e9q48ssPs1+GEh31DBWcCJIi02uY=,tag:boRBgXsz21BOv/xnR5+wfg==,type:comment]
+sops:
+  age:
+    - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzeWp3cDJwVFRDMUFNRDJS
+        TGVuZ0hXc2VXV2ExU21rSXhROGJCdXVIcWhBCmh1TWVFN3d6dENla0FkaFdXemcx
+        dG85dm9taWRqc1pQZTVWNlYrTjRXN0EKLS0tIFdKTTdsdDFUZGRnVHo4Z3RrOG0w
+        MHBvQWJDMERpYmJpY2xZd3RUYmt4SzAK5W5KKopI2gB60qf/WzEiAHDiuW19KeLX
+        lLMDQy/FMiutwUG0W/0ga0dcqc8SGUSSQ/6gEsJB577bAqBR9mNjAQ==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-09-01T18:20:36Z"
+  mac: ENC[AES256_GCM,data:+uG6dW77uvATaNrrtm24AIkvtreT9dCPu1iF7WMBxkr/UNHH1ApXs+fcvFJ4OgidYum6zzWiJxzYNHVjN66dZfiIQuaAgjUMnKi8pqHXL20uTESb0pSMJQeTFL5RUFd8zOBVUHloy3yOyjgd+atpFK+dOKkYDPnMtkXNmQQHsc8=,iv:ZdZ5HJIFPRXROSRLhcZuNaNOMcp1FWbi2UTv5Re0Tyw=,tag:mFk985STNqVNTvxJ9OBCxw==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.10.2
