--- a/kubernetes/apps/minio/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/minio/minio/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
         containers:
           app:
             image:
-              repository: quay.io/minio/minio
+              repository: docker.io/minio/minio
               tag: RELEASE.2024-09-22T00-00-00Z
             command: ["/bin/sh","-c"]
             args:
