fix(storage/minio): enable SECRET_DOMAIN substitution for secrets and add container ports; probes point to 9000

--- a/kubernetes/apps/minio/kustomization.yaml
+++ b/kubernetes/apps/minio/kustomization.yaml
@@ -5,6 +5,10 @@ kind: Kustomization
 namespace: minio
 components:
   - ../../components/common
+postBuild:
+  substituteFrom:
+    - kind: Secret
+      name: cluster-secrets
 resources:
   - ./secrets
   - ./minio/ks.yaml
