--- a/kubernetes/apps/minio/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/minio/minio/app/helmrelease.yaml
@@ -28,6 +28,11 @@ spec:
             image:
               repository: docker.io/minio/minio
               tag: latest
+            ports:
+              - name: http
+                containerPort: 9000
+              - name: console
+                containerPort: 9001
             command: ["/bin/sh","-c"]
             args:
               - |
