--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -5,6 +5,9 @@ kind: Kustomization
 namespace: database
 components:
   - ../../components/common
+postBuild:
+  substituteFrom:
+    - kind: Secret
+      name: cluster-secrets
 resources:
   - ./cloudnative-pg/ks.yaml
-
