feat(database): add MinIO cnpg backup user/policy job and switch pg-sample backup creds to dedicated user; add ScheduledBackup

--- a/kubernetes/apps/default/pg-sample/secrets/cnpg-backup.sops.yaml
+++ b/kubernetes/apps/default/pg-sample/secrets/cnpg-backup.sops.yaml
@@ -5,22 +5,22 @@ metadata:
   namespace: default
 type: Opaque
 stringData:
-  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:nsSp6ZY=,iv:77d2Lk2wEndYkRVIJTM83o+NM3KOFuVfTDb2fsLXSVs=,tag:JAlKKch9/jkb3ZYkyGyEGg==,type:str]
-  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:1PpDq5DeHRJaGqw1kq0k0A==,iv:czz1scwOE5shyCgobiDcffRCpE8JV43YJa6Qr4fE0Ck=,tag:PAFGGh3JNQQo9M9NJ2UwLQ==,type:str]
-  AWS_ENDPOINT: ENC[AES256_GCM,data:eBfsGDnELHpZTNBbdOOjXRnGoY3YrIxGkiTle5m4gW5eCjhXmre2GX8=,iv:T981mZnOs3jymJXe2zu03UuOUrIf2Fm51G+YP637ReM=,tag:IL8MmvMreqmf+DqMNseEpA==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:JrE/oU/9Fdl6p94=,iv:ejZvKRllehWq5puMJJ1XeZpNKWwDnIh/yfDKHBdXnfc=,tag:WgsdXlA5zSXAdwn9qvhY4Q==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:lZmsjFRSBolQIiSkVPA=,iv:u6eSEiPi7IDA+vYWSGU/2bpe/xvLDsOvZLJk2cFTO/8=,tag:QhRclEVzfi0zWrbWC/tfBg==,type:str]
+  AWS_ENDPOINT: ENC[AES256_GCM,data:nnkL47Y4bHCPn6Gz8b4LIX3TYE55MIlFxu/Kp51OMZjbZ1vzq/0cwy0=,iv:Kq71gtFFthtgEcstKncf94dI/5peGp2N2C54wVKyTkI=,tag:8yptC7JbPw3bjm45+Dt5VA==,type:str]
 sops:
   age:
     - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOUDhyN2sreGI1QkJUSVJL
-        YXdvQzlRdWY0K01uZTZXOVRCQTRpUXI5QTFFCkc0UGhBMUkzcUdLYjhUQzBUa1cy
-        MElXRi9WTXFETEgxdXd0MFcxZUYxUlUKLS0tIDNEQ3BqamZqa2JjcnkyQU5QYlZK
-        WEhWNHBQRE1WRmpaVmRvWCtJU1NWREkKiXxxjVEWJCauMF8vP+7RBgVHW85dXui5
-        XKlZDWAVgpTZSPCpBXyLSN+LJlOxBCuQf2P9em+p1GPyZao4jSHt9g==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZTTVSWHUyOEs2bllYMHda
+        RWNXeXovaEk1djhPZUQxdCt6STdNMVFIT25VCjMyZjRRYnJsMUhKSUhmZ2IvWmxk
+        QlFEZ2JQN0V2NTMxY3ZQM0JQYVFwK0UKLS0tIEhqUVNYUEV4aGs1ZjdJZGxHV2lZ
+        L0NFU2VYZmRoYXhzWmFURUcvNEVLNzQKI0osq2ezaeW6MGUHKVIKUbiNmDcyGyIs
+        u9R+Ls33sNcJyD4OXgrgvJb/3vNWHRTkJmhyoaLj+hFUkPnuQ9wSzg==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-09-01T19:33:45Z"
-  mac: ENC[AES256_GCM,data:uCyTResH27L7+KMPKu9gUzpnMzbqR7sgvK5jIvBFoOx29/ASCapxNU69h0ja8jLV3bsMENaaRu2MnNL5qhTxLMD7r8USPzVsVdkbwpxz7NnahtMbuNc2tq6ZVX0ueypZrFIg22C9msrRJIsdcUApDhAxAtPF/aqtx124z5U8w5I=,iv:rqxHuEfix/N4pmDjCoRNnAVpXW8EPpVK7AkoQq9UTVE=,tag:HvotP+Cz5iYwiEAK49l9Yg==,type:str]
+  lastmodified: "2025-09-01T19:40:27Z"
+  mac: ENC[AES256_GCM,data:cQ8CLy3u/DmsJfk0PM9ZwcLbWpINvIoRnpb/fxEtuvtZigxZfds+ShJIOT52u+1mshOQy5e0LuhN/+LmvaG9oGeCTkPy9S+7//Qqjp4ji9kpcAjlgXeSe/vQgfqIqSblWYGT3I9SseG/JjnB8rEmCAzEw90pSOLlBKeLK7myi5E=,iv:BJxVp0Yw/Q/VZDzESEIyvs3JjymJJslxZuK6URWI5LQ=,tag:ZlJfxBTWLQ7OnPCl3ctlxQ==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
