fix(database/pg-sample): correct ScheduledBackup spec.cluster to map with name

--- a/kubernetes/apps/default/pg-sample/scheduledbackup.yaml
+++ b/kubernetes/apps/default/pg-sample/scheduledbackup.yaml
@@ -9,5 +9,5 @@ spec:
   # Take an immediate backup once, then follow the schedule
   immediate: true
   backupOwnerReference: self
-  cluster: pg-sample
-
+  cluster:
+    name: pg-sample
